[gd_scene load_steps=6 format=2]

[ext_resource path="res://ASSETS/Assets/door.png" type="Texture" id=1]
[ext_resource path="res://ASSETS/R.png" type="Texture" id=2]
[ext_resource path="res://Door_Example.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 5 )

[sub_resource type="CircleShape2D" id=2]
radius = 21.0238

[node name="Door_Example" type="Node2D"]
script = ExtResource( 3 )

[node name="Up_Door" type="StaticBody2D" parent="."]
scale = Vector2( 2.5, 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Up_Door"]
modulate = Color( 0.686275, 0, 0, 1 )
position = Vector2( -0.199997, 16.6 )
rotation = -1.5708
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Up_Door"]
position = Vector2( -0.199997, 16.6 )
rotation = -1.5708
shape = SubResource( 1 )

[node name="Up_Door2" type="StaticBody2D" parent="."]
position = Vector2( 53, -1 )
scale = Vector2( 2.5, 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Up_Door2"]
modulate = Color( 0.686275, 0, 0, 1 )
position = Vector2( -0.199997, 16.6 )
rotation = -1.5708
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Up_Door2"]
position = Vector2( -0.199997, 16.6 )
rotation = -1.5708
shape = SubResource( 1 )

[node name="Up_Door3" type="StaticBody2D" parent="."]
position = Vector2( 121, 1 )
scale = Vector2( 2.5, 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Up_Door3"]
modulate = Color( 0.686275, 0, 0, 1 )
position = Vector2( -0.199997, 16.6 )
rotation = -1.5708
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Up_Door3"]
position = Vector2( -0.199997, 16.6 )
rotation = -1.5708
shape = SubResource( 1 )

[node name="Up_Door4" type="StaticBody2D" parent="."]
position = Vector2( 202, 0 )
scale = Vector2( 2.5, 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Up_Door4"]
modulate = Color( 0.686275, 0, 0, 1 )
position = Vector2( -0.199997, 16.6 )
rotation = -1.5708
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Up_Door4"]
position = Vector2( -0.199997, 16.6 )
rotation = -1.5708
shape = SubResource( 1 )

[node name="Button1" type="Area2D" parent="."]
position = Vector2( -164, 97 )
scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Button1"]
position = Vector2( 10.6, 5.60001 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button1"]
position = Vector2( 10.6, 5.6 )
shape = SubResource( 2 )

[node name="Button2" type="Area2D" parent="."]
position = Vector2( -222, 101 )
scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Button2"]
position = Vector2( 10.6, 5.60001 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button2"]
position = Vector2( 10.6, 5.6 )
shape = SubResource( 2 )

[node name="Button3" type="Area2D" parent="."]
position = Vector2( -278, 206 )
scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Button3"]
position = Vector2( 10.6, 5.60001 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button3"]
position = Vector2( 10.6, 5.6 )
shape = SubResource( 2 )

[node name="Button4" type="Area2D" parent="."]
position = Vector2( -232, 207 )
scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Button4"]
position = Vector2( 10.6, 5.60001 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button4"]
position = Vector2( 10.6, 5.6 )
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="Button1" to="." method="_on_Button1_body_entered"]
[connection signal="body_entered" from="Button2" to="." method="_on_Button2_body_entered"]
[connection signal="body_entered" from="Button3" to="." method="_on_Button3_body_entered"]
[connection signal="body_entered" from="Button4" to="." method="_on_Button4_body_entered"]
